--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ html{
 
 header{
   width: 100%;
-  height: 72px;
-  background-color: var(--colorheader);
+  height: 80px;
+  background-color:  #e40474; /*  var(--colorheader) ; */
   display: flex;  
   justify-content: space-between;  /* para que los elementos estén espaciados uniformemente.*/
   align-items: center;  /*para que los elementos estén alineados en el centro verticalmente.*/
@@ -36,8 +36,13 @@ strong{
   list-style-type:square;
 }
 #logo{
-max-width: 15rem;
+ max-width: 7rem;
+ margin-left: 5%; 
 
+}
+
+.nav{
+  display: flex;
 }
 
  .list{
@@ -45,10 +50,16 @@ max-width: 15rem;
   display:flex; /*para acomodar los elementos a horizontal */
   gap: 1rem;/* para separar los itens */
   align-items: center;
+  justify-content: center;
+  margin-top: 4%;
  }
  .list li a {
   text-decoration: none;/*quita el subrayado del enlace de cada elemento de la list*/
-  color:#1c1c1c;
+  color:#FFFFFF;
+ }
+
+ .carrito{
+  color: #ffffff;
  }
  
  #image{
@@ -76,6 +87,11 @@ cursor:pointer; /*es la manito*/
   cursor: pointer;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.075);
 
+}
+
+.carousel-item img {
+   filter: brightness(60%);
+   /*Reduceelbrilloal50%*/
 }
 
 .input {
@@ -129,6 +145,11 @@ width:1200px;
 #image:hover{
   box-shadow: 0 0.16px 20px rgba(16, 13, 7, 0.5); }/* indica la difuminacion ,y el porcentaje de sombra*/
  
+  .tituloReceta{
+    color: #252525;
+    font-size: 32px;
+    font-family: "Nunito Sans", sans-serif;
+  }
 footer {
     background-color: #343a40;
     color: white;
