--- a/style.css
+++ b/style.css
@@ -232,8 +232,48 @@ footer {
 }
 
 @media screen and (max-width: 650px) {
+
+  body {
+    overflow-x: hidden; /* Evita el scroll horizontal */
+  }
+ 
+  header{
   
-  #imgprincipal {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: flex-start;
+    box-sizing: border-box; /* Incluye padding y borde en el ancho total */
+    
+  }
+
+  #logo {
+    max-width: 47%;
+    max-height: 45%;
+   margin-left: -20px;
+    
+  }
+
+  .navbar-toggler {
+    display: flex; /* Ahora visible */
+    margin-left: -180px;
+   
+  }
+  .nav, .list, .buscador, .carrito {
+    max-width: 100%; /* Asegura que no se desborden */
+    box-sizing: border-box;
+  }
+
+
+ .buscador {
+  display: none;  /*oculta el buscador*/
+  }
+
+  main{
+    width: 100%;
+  }
+  
+  .imgprincipal {
     width: 100%; /* Ajusta el ancho al 100% para que se adapte al ancho de la pantalla */
     max-height: 300px; /* Establece una altura máxima para las imágenes en dispositivos móviles */
   }
@@ -243,18 +283,6 @@ footer {
   }
  
  
-  #logo {
-    max-width: 100%;
-    margin-bottom: 1rem;
-  }
-
-  .buscador {
-    width: 100%;
-  }
-
-  .navbar-toggler {
-    display: flex; /* Ahora visible */
-  }
   .list {
     display: none; /* Oculta el menú inicialmente */
     flex-direction: column;
@@ -309,6 +337,7 @@ footer {
   }
 
   footer {
+    width: 100%;
     text-align: center;
     padding: 20px 0;
   }
